--- a/python_proj/python_proj/stat_site/templates/stat_site/last_vacncies.html
+++ b/python_proj/python_proj/stat_site/templates/stat_site/last_vacncies.html
@@ -1,2 +1,25 @@
 {% extends "stat_site/base.html" %}
+
+{% block main %}
+<p>
+    здесь можно узнать о последних вакансиях для админов бд
+</p>
+<ul>
+{% for vacancy in vacancies_list %}
+<li>
+    <p>{{ vacancy.name }}</p>
+    <p>{{ vacancy.description }}</p>
+    <p>
+        {% for skill in vacancy.key_skills %}
+            {{ skill }},
+        {% endfor %}
+    </p>
+    <p>{{ vacancy.salary.middle_salary }}</p>
+    <p>{{ vacancy.employer_name }}</p>
+    <p>{{ vacancy.pub_date }}</p>
+
+</li>
+{% endfor %}
+</ul>
+{% endblock %}
 {% block link_5 %}<a href="{% url 'welcome'%}">на главную</a>{% endblock %}
