--- a/python_proj/python_proj/stat_site/templates/stat_site/base.html
+++ b/python_proj/python_proj/stat_site/templates/stat_site/base.html
@@ -7,13 +7,17 @@
         {% block head %}
         {% endblock %}
     </head>
-    <body>
+    <body >
     <header>
-            администратор баз данныз как 
+            администратор баз данных как успешное настоящие
     </header>
     <main class="main-content">
                 {% block main%}
-                главная часть страницы
+                <p>Добро пожаловать на мой сайт, посвященный профессии администратора баз данных</p>
+                <p>на нем вы можете найти различную информацию об этой замечательной профессии</p>
+                <p>о чем эта страница?</p>
+                <p>она приветственная, и должна немного рассказать вам о том куда вы полпали</p>
+                <p></p>
                 {% endblock %}
     </main>
     <ul class="left-menu">
