--- a/python_proj/python_proj/stat_site/templates/stat_site/prof_page.html
+++ b/python_proj/python_proj/stat_site/templates/stat_site/prof_page.html
@@ -11,7 +11,7 @@
 </p>
 <p>
    {{ profession.desription }}
-   <img src="{{photo.img.url}}" alt="">
+   <img src="{{photo.image.url}}" alt="">
 </p>
 {% endblock %}
 {% block link_1%}<a href="{%url 'welcome' %}">на главную</a>{% endblock %}
